# wagtail-admin-preview

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
src/wagtail_admin_preview/: apps.py  panels.py  wagtail_hooks.py
src/wagtail_admin_preview/templates/wagtail_admin_preview/: preview_panel.html
