[metadata]
name = wagtail-admin-preview
version = 0.1.0
author = Sadat Sakif Ahmed
author_email = sadat_s_ahmed@outlook.com
maintainer = Sadat Sakif Ahmed
maintainer_email = sadat_s_ahmed@outlook.com
description = Simple Page Preview Tab in Wagtail Admin Panel
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/sadat-sakif-ahmed/wagtail-admin-preview
license = BSD
keywords=
    django
    wagtail
    wagtail-cms
    admin-preview
classifiers =
    Framework :: Wagtail
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
package_dir =
    = src
include_package_data = true
packages = find:
install_requires =
    wagtail >= 3.0

[options.packages.find]
where = src